RESOLVED FIXED108916
[chromium] Fix broken SVG-disabled build.
https://bugs.webkit.org/show_bug.cgi?id=108916
Summary [chromium] Fix broken SVG-disabled build.
Mike West
Reported 2013-02-05 00:15:05 PST
After http://wkbug.com/108397 the SVG-disabled chromium build is broken: ../../Source/WebCore/css/CSSParser.cpp:1800:13: error: enumeration value 'CSSPropertyWebkitGridAutoFlow' not handled in switch [-Werror,-Wswitch] switch (propId) { ^ 1 error generated.
Attachments
Patch (1.44 KB, patch)
2013-02-05 00:23 PST, Mike West
webkit.review.bot: commit-queue-
Mike West
Comment 1 2013-02-05 00:23:17 PST
WebKit Review Bot
Comment 2 2013-02-05 00:52:00 PST
Comment on attachment 186562 [details] Patch Rejecting attachment 186562 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 186562, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: ommit-queue/Source/WebKit/chromium/third_party/snappy/src --revision 63 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 53>At revision 63. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output: http://queues.webkit.org/results/16366674
Mike West
Comment 3 2013-02-05 01:16:12 PST
Dropped the "OOPS" from the changelog, and landed as http://trac.webkit.org/changeset/141872.
Note You need to log in before you can comment on or make changes to this bug.