[chromium] Unreviewed: Fix broken SVG-disabled build. https://bugs.webkit.org/show_bug.cgi?id=108916

The new enum value CSSPropertyWebkitGridAutoFlow was introduced in
r141787, and accidentally left out of CSSParser::parseValue's big
switch. This causes problems in non-SVG builds.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue):

Canonical link: https://commits.webkit.org/127131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141872 268f45cc-cd09-0410-ab3c-d52691b4dbfc